packages/sfdx-package/force-app/main/default/objects/Admin_Audit_Log__c/Admin_Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Immutable audit trail of admin-console changes for the Ohanafy Field package.</description>
    <label>Admin Audit Log</label>
    <nameField>
        <displayFormat>AAL-{0000}</displayFormat>
        <label>Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>