packages/sfdx-package/force-app/main/default/objects/Admin_Audit_Log__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>The category of admin action that was logged.</description>
    <label>Action Type</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>