packages/sfdx-package/force-app/main/default/objects/Admin_Audit_Log__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>The user who performed the admin action.</description>
    <label>Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Admin Audit Logs</relationshipLabel>
    <relationshipName>Admin_Audit_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>