packages/sfdx-package/force-app/main/default/objects/Admin_Audit_Log__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>JSON snapshot of the action payload (before/after diff).</description>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>